--- a/scss/object/project/_contents.scss
+++ b/scss/object/project/_contents.scss
@@ -1,43 +1,67 @@
 @charset "UTF-8";
+@use "../../foundation/mixin";
 .p-main__contents {
     width: 100%;
     background-color: #E9F2F4;
     &-sub {
-        max-width: 1440px;
-        margin: 0 auto;
+        margin: 0 20px;
         text-align: center;
+        @include mixin.pc {
+            max-width: 1440px;
+            margin: 0 auto;
+        }
         .section-contents-title {
-            margin-bottom: 50px;
-            padding-top: 48px;
-            font-size: 27px;
+            font-size: 22px;
+            padding-top: 44px;
+            margin-bottom: 44px;
+            @include mixin.pc {
+                margin-bottom: 50px;
+                padding-top: 48px;
+                font-size: 27px;
+            }
         }
         .p-main__contents-box {
             display: grid;
-            grid-template-columns: 211px 211px 211px 211px;
-            grid-template-rows: 281px 281px 0;
-            gap: 77px;
             justify-content: center;
+            grid-template-columns: 150px 150px;
+            grid-template-rows: 237px 237px 237px 237px;
+            gap: 34px;
+            @include mixin.pc {
+                grid-template-columns: 211px 211px 211px 211px;
+                grid-template-rows: 281px 281px 0;
+                gap: 77px;
+            }
             .p-main__contents-block {
                 .p-main__contents-circle {
-                    width: 211px;
-                    height: 211px;
+                    width: 150px;
+                    height: 150px;
                     background-color: #FFFFFF;
                     border-radius: 50%;
                     display: flex;
                     align-items: center;
                     justify-content: center;
-                    margin: 0 auto 20px;
+                    @include mixin.pc {
+                        width: 211px;
+                        height: 211px;
+                        margin: 0 auto 20px;
+                    }
                     &-inner {
                         .p-main__contents-img-title {
                             color: #4B4B4B;
-                            font-size: 18px;
+                            font-size: 16px;
+                            @include mixin.pc {
+                                font-size: 18px;
+                            }
                         }
                     }
                 }
                 .p-main__contents-text {
-                    font-size: 15px;
+                    font-size: 14px;
                     line-height: 25px;
-                    margin-bottom: 80px;
+                    @include mixin.pc {
+                        font-size: 15px;
+                        margin-bottom: 80px;
+                    }
                 }
             }
         }
