--- a/scss/object/project/_access.scss
+++ b/scss/object/project/_access.scss
@@ -1,24 +1,40 @@
 @charset "UTF-8";
+@use "../../foundation/mixin";
 .p-main__access {
     width: 100%;
     &-sub {
-        max-width: 1440px;
+        margin: 0 20px;
         text-align: center;
-        margin: 0 auto;
+        @include mixin.pc {
+            max-width: 1440px;
+            margin: 0 auto;
+        }
         .section__access-title {
-            margin-bottom: 50px;
-            padding-top: 66px;
-            font-size: 27px;
+            font-size: 22px;
+            margin-bottom: 60px;
+            padding-top: 78px;
+            @include mixin.pc {
+                font-size: 27px;
+                margin-bottom: 50px;
+                padding-top: 66px;
+            }
         }
         .p-main__access-map-img {
-            width: 80%;
-            height: 350px;
+            width: 100%;
             object-fit: cover;
-            margin-bottom: 66px;
+            margin-bottom: 40px;
+            height: 207px;
+            @include mixin.pc {
+                width: 80%;
+                height: 350px;
+                margin-bottom: 66px;
+            }
         }
         .p-main__access-box {
-            display: flex;
-            justify-content: center;
+            @include mixin.pc {
+                display: flex;
+                justify-content: center;
+            }
             .p-main__access-map {
                 text-align: left;
                 img {
@@ -32,8 +48,8 @@
                     line-height: 32px;
                 }
                 a {
+                    width: 100%;
                     height: 60px;
-                    width: 397px;
                     background-color: #51A8BB;
                     display: inline-block;
                     text-align: center;
@@ -41,11 +57,15 @@
                     border-radius: 10px;
                     box-shadow: -2px 4px 3px rgba(0, 0, 0, 0.15);
                     margin: 15px 0 93px 0;
+                    color: #FFFFFF;
+                    @include mixin.pc {
+                        width: 397px;
+                    }
                     .fa-map-marker-alt {
                         font-family: "Font Awesome 5 Free"; //Font Awesomeバージョン5のフリー版
                         content: "\f3c5";   //アイコンの決められたコード
                         font-weight: 900;
-                        color: #000000;    //カラーを指定しないとアイコンが透過されて見えない
+                        color: #FFFFFF;    //カラーを指定しないとアイコンが透過されて見えない
                         margin-right: 10px;
                     }
                 }
