--- a/scss/object/project/_footer-main.scss
+++ b/scss/object/project/_footer-main.scss
@@ -4,65 +4,121 @@
     width: 100%;
     background-color: #E9F2F4;
     &__sub {
-        max-width: 1440px;
-        text-align: center;
-        margin: 0 auto;
-        .p-footer__block {
-            display: flex;
-            justify-content: center;
+        margin: 0 20px;
+        @include mixin.tab {
+            margin: 0 50px;
+        }
+        @include mixin.pc {
+            max-width: 1440px;
+            text-align: center;
             margin: 0 auto;
+        }
+        .p-footer__block {
+            text-align: center;
+            @include mixin.pc {
+                text-align: inherit;
+                display: flex;
+                justify-content: center;
+                margin: 0 auto;
+            }
             .p-footer__title-logo {
-                margin: 18px 5px 0 140px;
+                margin: 0;
+                @include mixin.pc {
+                    margin: 18px 5px 0 140px;
+                }
             }
             .p-footer__nav {
                 display: flex;
-                margin: 54px 0 0 0;
+                justify-content: center;
+                flex-wrap: wrap;
+                margin: 50px 0 0 0;
+                @include mixin.pc {
+                    justify-content: inherit;
+                    flex-wrap: inherit;
+                    margin: 54px 0 0 0;
+                }
                 &-list {
-                    margin: 0 35px;
+                    margin: 0 0 55px 0;
+                    width: 30%;
+                    @include mixin.pc {
+                        margin: 0 35px;
+                        width: inherit;
+                    }
                     a {
-                        font-size: 18px;
+                        font-size: 14px;
+                        @include mixin.pc {
+                            font-size: 18px;
+                        }
                     }
                 }
                 .p-footer__separation {
                     position: relative;
                 }
                 .p-footer__separation::before {
-                    content: ""; 
-                    display: block;
-                    width: 1.5px; 
-                    height: 46px; 
-                    background-color: #000000; 
-                    position: absolute;
-                    top: -9px;
-                    left: -35px; 
+                    display: none;
+                    @include mixin.pc {
+                        content: ""; 
+                        display: block;
+                        width: 1.5px; 
+                        height: 46px; 
+                        background-color: #000000; 
+                        position: absolute;
+                        top: -9px;
+                        left: -35px; 
+                    }
                 }
             }
             .p-footer__tell-box {
+                @include mixin.tab {
+                    width: 35%;
+                    margin: 0 auto;
+                }
                 @include mixin.pc {
                     margin-left: 5px;
+                    width: inherit;
                 }
                 .p-footer__tell-number {
                     display: inline-block;
+                    width: 100%;
                     border-radius: 10px;
+                    font-size: 18px;
+                    letter-spacing: 0.06em;
                     background-color: #EEC4BD;
-                    padding: 9px 53px;
-                    margin: 25px 140px 19px 0;
-                    font-size: 20px;
-                    letter-spacing: 0.04em;
+                    height: 50px;
+                    line-height: 50px;
+                    box-shadow: -2px 4px 3px rgba(0, 0, 0, 0.15);
+                    @include mixin.pc {
+                        margin: 25px 140px 19px 0;
+                        font-size: 20px;
+                        height: 48px;
+                        line-height: 48px;
+                        padding: 0 53px;
+                        letter-spacing: 0.04em;
+                        width: inherit;
+                        box-shadow: none;
+                    }
                     .fa-phone-alt {
                         font-family: "Font Awesome 5 Free"; //Font Awesomeバージョン5のフリー版
                         content: "\f879";   //アイコンの決められたコード
                         font-weight: 900;
                         color: #000;    //カラーを指定しないとアイコンが透過されて見えない
-                        margin-right: 8px;
+                        margin-right: 30px;
+                        @include mixin.pc {
+                            margin-right: 8px;
+                        }
                     }
                 }
                 .p-footer__business-hours {
-                    font-size: 18px;
-                    margin-left: 28px;
-                    margin-bottom: 71px;
-                    letter-spacing: 0.04em;
-                    text-align: left;
+                    font-size: 14px;
+                    margin: 16px 0 0 0;
+                    padding-bottom: 26px;
+                    @include mixin.pc {
+                        font-size: 18px;
+                        margin: 0 0 71px 28px;
+                        letter-spacing: 0.04em;
+                        text-align: left;
+                        padding-bottom: 0;
+                    }
                     .fa-clock {
                         font-family: "Font Awesome 5 Free"; //Font Awesomeバージョン5のフリー版
                         content: "\f017";   //アイコンの決められたコード
@@ -78,12 +134,21 @@
         width: 100%;
         background-color: #51A8BB;
         &-sub {
-            max-width: 1440px;
-            margin: 0 auto;
+            margin: 0 20px;
+            height: 40px;
             display: flex;
             align-items: center;
             justify-content: center;
-            height: 50px;
+            @include mixin.pc {
+                max-width: 1440px;
+                margin: 0 auto;
+                height: 50px;
+            }
+            .copyright {
+                color: #FEFEFE;
+                font-size: 12px;
+                 
+            }
         }
     }
 }
