--- a/scss/style.scss
+++ b/scss/style.scss
@@ -32,6 +32,7 @@
    @use "object/project/information";
    @use "object/project/contents";
    @use "object/project/access";
+   @use "object/project/button";
 
 /* Utility
    ----------------------------------------------------------------- */
