--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -4,7 +4,10 @@
     width: 100%;
     height: 70px;
     background-color: #E9F2F4;
+    position: fixed;
+    z-index: 100;
     @include mixin.pc {
         height: 103px;
+        position: inherit;
     }
 }
