--- a/scss/object/project/_access.scss
+++ b/scss/object/project/_access.scss
@@ -5,6 +5,9 @@
     &-sub {
         margin: 0 20px;
         text-align: center;
+        @include mixin.tab {
+            margin: 0 50px;
+        }
         @include mixin.pc {
             max-width: 1440px;
             margin: 0 auto;
@@ -24,8 +27,10 @@
             object-fit: cover;
             margin-bottom: 40px;
             height: 207px;
-            @include mixin.pc {
+            @include mixin.tab {
                 width: 80%;
+            }
+            @include mixin.pc {
                 height: 350px;
                 margin-bottom: 66px;
             }
@@ -37,15 +42,51 @@
             }
             .p-main__access-map {
                 text-align: left;
-                img {
-                    width: 282px;
-                    height: 33px;
+                @include mixin.tab {
+                    text-align: center;
                 }
-                .p-main__address {
-                    margin: 10px 0 20px 0;
+                @include mixin.pc {
+                    text-align: left;
                 }
-                .p-main__access-text {
-                    line-height: 32px;
+                &-group {
+                    @include mixin.tab {
+                        text-align: center;
+                        width: 300px;
+                        margin: 0 auto;
+                    }
+                    @include mixin.pc {
+                        text-align: inherit;
+                        width: inherit;
+                        margin: inherit;
+                    }
+                    img {
+                        width: 282px;
+                        height: 33px;
+                    }
+                    .p-main__address {
+                        font-size: 14px;
+                        margin: 12px 0 25px 0;
+                        @include mixin.tab {
+                            text-align: left;
+                        }
+                        @include mixin.pc {
+                            text-align: inherit;
+                            font-size: 16px;
+                            margin: 10px 0 20px 0;
+                        }
+                    }
+                    .p-main__access-text {
+                        line-height: 25px;
+                        font-size: 14px;
+                        @include mixin.tab {
+                            text-align: left;
+                        }
+                        @include mixin.pc {
+                            text-align: inherit;
+                            font-size: 16px;
+                            line-height: 32px;
+                        }
+                    }
                 }
                 a {
                     width: 100%;
@@ -56,10 +97,16 @@
                     line-height: 60px;
                     border-radius: 10px;
                     box-shadow: -2px 4px 3px rgba(0, 0, 0, 0.15);
-                    margin: 15px 0 93px 0;
                     color: #FFFFFF;
+                    font-size: 14px;
+                    margin: 25px 0 55px 0;
+                    @include mixin.tab {
+                        width: 35%;
+                    }
                     @include mixin.pc {
+                        margin: 15px 0 93px 0;
                         width: 397px;
+                        font-size: 16px;
                     }
                     .fa-map-marker-alt {
                         font-family: "Font Awesome 5 Free"; //Font Awesomeバージョン5のフリー版
@@ -71,8 +118,13 @@
                 }
             }
             .p-main__access-table {
-                margin-left: 77px;
-                margin-top: 12px;
+                display: inline-block;
+                font-size: 14px;
+                @include mixin.pc {
+                    margin-left: 77px;
+                    margin-top: 12px;
+                    font-size: 16px;
+                }
                 table {
                     border-spacing: 0;
                     font-weight: normal;
@@ -103,62 +155,128 @@
                 .p-main__access-table-text {
                     text-align: left;
                     margin-top: 15px;
+                    margin-bottom: 55px;
+                    @include mixin.pc {
+                        margin-bottom: inherit;
+                    }
                 }
             }
         }
         .p-main__access-dentist {
-            display: flex;
-            justify-content: center;
-            align-items: center;
+            @include mixin.pc {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
             &-img {
-                margin-right: 48px;
+                width: 100%;
+                @include mixin.tab {
+                    width: 80%;
+                }
+                @include mixin.pc {
+                    width: inherit;
+                    margin-right: 48px;
+                    margin-bottom: 108px;
+                }
             }
             .p-main__access-reserve {
-                margin-top: 20px;
+                margin-top: 25px;
+                @include mixin.pc {
+                    margin-top: 20px;
+                }
                 .p-main__access-tell-box {
                     .p-main__access-reserve-tell {
                         display: inline-block;
-                        width: 480px;
-                        height: 76px;
+                        width: 100%;
+                        height: 60px;
+                        line-height: 60px;
+                        font-size: 18px;
                         background-color: #EEC4BD;
                         border-radius: 10px;
-                        line-height: 76px;
-                        font-size: 23px;
-                        margin-bottom: 28px;
-                        border-radius: 10px;
+                        margin-bottom: 20px;
+                        letter-spacing: 0.06em;
                         box-shadow: -2px 4px 3px rgba(0, 0, 0, 0.15);
+                        @include mixin.tab {
+                            width: 45%;
+                            font-size: 14px;
+                        }
+                        @include mixin.pc {
+                            width: 480px;
+                            height: 76px;
+                            line-height: 76px;
+                            font-size: 23px;
+                            margin-bottom: 28px;
+                        }
                         .fa-phone-alt {
                             font-family: "Font Awesome 5 Free"; //Font Awesomeバージョン5のフリー版
                             content: "\f879";   //アイコンの決められたコード
                             font-weight: 900;
                             color: #000000;    //カラーを指定しないとアイコンが透過されて見えない
-                            margin-right: 42px;
+                            margin-right: 30px;
+                            @include mixin.tab {
+                                margin-right: 10px;
+                            }
+                            @include mixin.pc {
+                                margin-right: 42px;
+                            }
                         }
                     }
                 }
                 .p-main__access-net-box {
                     .p-main__access-reserve-net {
                         display: inline-block;
-                        width: 480px;
-                        height: 76px;
+                        width: 100%;
+                        height: 60px;
+                        line-height: 60px;
+                        font-size: 18px;
                         background-color: #EEC4BD;
                         border-radius: 10px;
-                        line-height: 76px;
-                        font-size: 20px;
-                        border-radius: 10px;
+                        margin-bottom: 20px;
+                        letter-spacing: 0.06em;
                         box-shadow: -2px 4px 3px rgba(0, 0, 0, 0.15);
+                        @include mixin.tab {
+                            width: 45%;
+                            font-size: 14px;
+                        }
+                        @include mixin.pc {
+                            width: 480px;
+                            height: 76px;
+                            line-height: 76px;
+                            font-size: 23px;
+                            margin-bottom: 0;
+                        }
                         .fa-desktop {
                             font-family: "Font Awesome 5 Free"; //Font Awesomeバージョン5のフリー版
                             content: "\f108";   //アイコンの決められたコード
                             font-weight: 900;
                             color: #000000;    //カラーを指定しないとアイコンが透過されて見えない
-                            margin-right: 29px;
+                            margin-right: 27px;
+                            @include mixin.tab {
+                                margin-right: 10px;
+                            }
+                            @include mixin.pc {
+                                margin-right: 29px;
+                            }
                         }
                     }
                 }
                 .p-main__access-reserve-caution {
-                    margin-top: 28px;
-                    line-height: 32px;
+                    margin-top: 25px;
+                    line-height: 25px;
+                    text-align: left;
+                    font-size: 14px;
+                    margin-bottom: 56px;
+                    @include mixin.tab {
+                        text-align: center;
+                        margin-bottom: 50px;
+                    }
+                    @include mixin.pc {
+                        text-align: inherit;
+                        margin-top: 28px;
+                        margin-bottom: 0;
+                        line-height: 32px;
+                        font-size: 16px;
+                    }
                 }
             }
         }
