--- a/scss/object/project/_feature.scss
+++ b/scss/object/project/_feature.scss
@@ -1,15 +1,37 @@
 @charset "UTF-8";
 @use "../../foundation/mixin";
 .p-main__feature {
-    background-image: url(/images/背景.png);
+    background-image: url(/images/Rectangle\ 13.png);
     width: 100%;
-    background-size: cover;
+    height: 430px;
+    position: relative;
+    height: auto;
+    background-size: contain;
+    background-position: top;
     @include mixin.pc {
+        background-image: url(/images/Rectangle-pc\ 13.png);
         height: 817px;
+        background-size: cover;
+        background-position: inherit;
+    }
+    &-background {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        background-color: #FAFAFA;
+        opacity: 0.8;
+        @include mixin.pc {
+            background-color: #FFFFFF;
+        }
     }
     &-sub {
         text-align: center;
         margin: 0 20px;
+        @include mixin.tab {
+            margin: 0 50px;
+        }
         @include mixin.pc {
             max-width: 1440px;
             margin: 0 auto;
@@ -20,6 +42,7 @@
             padding-top: 75px;
             text-align: center;
             margin-bottom: 53px;
+            position: relative;
             @include mixin.pc {
                 padding-top: 130px;
                 margin-bottom: 62px;
@@ -37,6 +60,10 @@
                 width: 86%;
                 margin: 0 auto 70px;
                 height: 355px;
+                filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.1));
+                @include mixin.tab {
+                    width: 60%;
+                }
                 @include mixin.pc {
                     width: 20%;
                     margin: 0;
@@ -175,6 +202,10 @@
             color: #51A8BB;
             margin-top: 60px;
             margin-bottom: 60px;
+            position: relative;
+            @include mixin.tab {
+                width: 35%;
+            }
             @include mixin.pc {
                 margin-top: 55px;
                 width: 27%;
@@ -182,5 +213,19 @@
                 margin-bottom: 0;
             }
         }
+    }
+}
+.p-main__feature::after {
+    content: "";
+    background-image: url(/images/ぼかし.png);
+    background-position: top;
+    background-repeat: repeat-x;
+    position: absolute;
+    top: 515px;
+    left: 0;
+    height: 50px;
+    width: 100%;
+    @include mixin.pc {
+        display: none;
     }
 }
