--- a/scss/object/project/_main-visual.scss
+++ b/scss/object/project/_main-visual.scss
@@ -20,23 +20,28 @@
             font-weight: normal;
             float: right;
             margin-top: 50px;
-            @include mixin.pc {
-                position: absolute;
-                top: 130px;
-                left: 164px;
-                float: none;
-                margin-top: 0;
+            @include mixin.tab {
+                margin: 100px 40px 0 0;
+                font-size: 28px;
             }
             @include mixin.pc {
+                position: absolute;
+                float: none;
                 top: 395px;
                 left: 180px;
                 font-size: 35px;
                 line-height: 56px;
+                margin-top: 0;
             }
             span {
                 font-size: 20px;
                 @include mixin.pc {
                     font-size: 30px;
+                }
+            }
+            .br-sp {
+                @include mixin.tab {
+                    display: none;
                 }
             }
         }
